--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,10 @@ fonts-installed-vlisp.vmacs
 DOOMED.vmacs
 recentf
 projects
+test-thing.lisp~
+test-thing.lisp
+init.el~
+history
+.emacs.desktop
+\#test-thing.lisp\#
+\#init.el\#
