--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,21 @@ recentf~
 .vmacs-fully-initialized
 luamacs.o
 luamacs.so
+
+
+.dub
+docs.json
+__dummy.html
+docs/
+/lua_mode
+lua_mode.so
+lua_mode.dylib
+lua_mode.dll
+lua_mode.a
+lua_mode.lib
+lua_mode-test-*
+*.exe
+*.pdb
+*.o
+*.obj
+*.lst
